--- a/azure-pipelines-uat.yml
+++ b/azure-pipelines-uat.yml
@@ -35,4 +35,7 @@ steps:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+    
+    
+- task: PublishBuildArtifacts@1
   
